--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,9 @@
 
 		<link href="./libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
+    <link href="./libraries/js/buttons/css/buttons.css" rel="stylesheet">
+
+    <script type="text/javascript" src="./libraries/js/buttons/js/buttons.js"></script>  
 
   	<script type="text/javascript" src="./libraries/js/carousel/carousel.js"></script>
     
@@ -105,7 +108,9 @@
             <div class="carousel-caption">
               <h1>Registration</h1>
               <p>Note: If you're not registred this page are close for you. For future activity please sign up. Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up</a></p>
+              <a href="#" class="button glow  button-circle button-primary">Sign up</a>
+              <br>
+              <br>
             </div>
           </div>
         </div>
@@ -137,7 +142,7 @@
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header"  id="header">Dashboard</h1>
+          <h1 class="page-header"  id="header">Overview</h1>
 
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
@@ -158,7 +163,8 @@
             </div>
           </div>
 
-          <h2 class="sub-header">Section title</h2>
+          <h2 class="sub-header">Reports</h2>
+          <p>Something else</p>
           <div class="table-responsive">
             
           </div>
